fixed up stretching issue on mobile

--- a/public/index.css
+++ b/public/index.css
@@ -28,6 +28,10 @@ html {
     margin-left: 30px;
     margin-right: 30px;
   }
+  .banner-image {
+    max-width: 100%;
+    height: auto;
+  }
   .pretzel-logo {
     max-width: 120px;
   }
@@ -181,9 +185,21 @@ hr {
   text-shadow: white 1px 1px 1px;
 }
 
-.product img {
-  height: 400px;
+@media screen and (max-width: 786px) {
+  .product img {
+    height: 300px;
+  }
+  
 }
+
+@media screen and (min-width: 786px) {
+  .product img {
+    height: 400px;
+  }
+  
+}
+
+
 
 /* footer */
 footer {
